card persist function almost there

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <input type="text" id="title-input" class="inputs">
       <label for="body-input">Body</label>
       <textarea type="text" id="body-input" class="inputs"></textarea>
-      <button type="submit" class="save-button buttons">Save</button>
+      <input type="button" class="save-button buttons" value="Save">
       <div class="filter-buttons-section">
         <button class="filter-button buttons swill-button">Swill</button>
         <button class="filter-button buttons plausible-button">Plausible</button>
