--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1 class="page-title-purple">ideabox<span class="page-title-white">triples</span></h1>
     <form class="search-form">
-      <input type="text" placeholder=" Search" id="search-input">
+      <input type="text" oninput="searchFilter(this.value)" placeholder=" Search" id="search-input">
       <button type="submit" class="search-button">
         <i class="fas fa-search"></i>
       </button>
