--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         <button class="filter-button buttons genius-button">Genius</button>
         <button class="filter-button buttons reset-button">Reset</button>
       </div>
+    <button class="show-more-button buttons" onclick="showButton()">Show More</button>
     </form>
   </main>
-  <article class="card-section">
+  <article class="card-section max-height" id="max-height">
    <!--  <article class="card">
       <h2>Title</h2>
       <p>Body</p>
