Refactor update content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1 class="page-title-purple">ideabox<span class="page-title-white">triples</span></h1>
+    <h1 class="page-title-purple">ideabox<span class="page-title-white">doubles</span></h1>
     <form class="search-form">
       <input type="text" oninput="searchFilter(this.value)" placeholder=" Search" id="search-input">
       <button type="submit" class="search-button">
