css changes to boxes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ideabox Triples</title>
+  <title>Ideabox Doubles</title>
   <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1 class="page-title-purple">ideabox<span class="page-title-white">doubles</span></h1>
+    <h1 class="page-title-purple">Ideabox<span class="page-title-white">Doubles</span></h1>
     <form class="search-form">
       <input type="text" oninput="searchFilter(this.value)" placeholder=" Search" id="search-input">
       <button type="submit" class="search-button">
