Clean up js files

--- a/index.html
+++ b/index.html
@@ -37,19 +37,7 @@
     </form>
   </main>
   <article class="card-section max-height" id="max-height">
-   <!--  <article class="card">
-      <h2>Title</h2>
-      <p>Body</p>
-      <section class="button-corral">
-        <div class="vote">
-          <button class="downvote"></button>
-          <button class="upvote"></button>
-          <p class="quality">Quality</p>
-        </div>
-        <button class="delete"></button>
-      </section>
-    </article> -->
-    <!-- <button class="show-more-button buttons">Show More</button> -->
+<!-- Cards -->
   </article>
   <script type="text/javascript" src="idea.js"></script>
   <script type="text/javascript" src="main.js"></script>
